# open-spec-correct

./: README.md  pyproject.toml
open_spec_correct/: __init__.py  main.py  prompts.py
