[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-spec-correct"
version = "2025.12.21155728"
description = "A new package designed to streamline and automate the correction of imperfect OpenAPI specifications by analyzing user-provided textual descriptions and extracting structured insights. It processes te"
readme = "README.md"
authors = [{ name = "open-spec-correct", email = "hi@eugene.plus" }]
requires-python = ">=3.9"
dependencies = [
  "langchain-llm7>=0.0.0",
  "llmatch-messages>=0.0.0",
  "langchain-core>=0.3.0",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/chigwell/open-spec-correct"
